crates/quench-runtime/tests/spec_fixtures/errors/reference_error.js
// spec: ECMA-262 sec-reference-record-specification-type
// expect: error: ReferenceError
// tags: errors, reference

notDefined;
